objects/custom1__c.object
<CustomObject>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pan_Number__c</fullName>
        <label>Pan Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Trail__c</fullName>
        <label>Trail</label>
        <referenceTo>Trail__c</referenceTo>
        <relationshipLabel>custom1s</relationshipLabel>
        <relationshipName>custom1s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>custom1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>custom1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>custom1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>